[fix] page overflow, creato unico pseudo elemento invece dei 2 per l'hover sulle card

--- a/style/app.css
+++ b/style/app.css
@@ -65,7 +65,12 @@ button {
 
     display: flex;
     flex-grow: 1;
+    overflow: hidden;
 
+}
+
+.main{
+    overflow: auto;
 }
 
 
@@ -455,7 +460,8 @@ button {
     position: relative;
 }
 
-.figure:hover::after{
+/* ********** sostituiti con pseudo elemento unico **************
+.figure::after{
     content: url(../img/play-circle-regular.svg);
     top: 0;
     left: 0;
@@ -468,6 +474,8 @@ button {
 
 }
 
+
+
 .figure:hover::before{
     content: "";
     top: 0;
@@ -477,17 +485,36 @@ button {
     display: block;
     position: absolute;
     background-color: rgba(0, 0, 0, 0.4);
+}
+ ******************************* */
+.figure:hover::after {
 
+    text-rendering: auto;
+    -webkit-font-smoothing: antialiased;
+    font: var(--fa-font-regular);
+    content: '\f144';
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.4);
+    font-size: 50px;
+    justify-content: center;
+    align-items: center;
 }
 
-.popular .figure:hover::before{
+
+.popular .figure:hover::after{
 border-radius: 999px;
 
 }
 
-.overflow{
-    overflow: auto;
-}
+
+
+
+
 
 /* ================================ media quesries =============================== */
 
